--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <!-- <link rel="stylesheet" type="text/css" href="vendors/css/grid.css"> -->
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
